/*
 * $Id$
 */

2010-05-27 10:24 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  ChangeLog
     * some minor formatting

  *  src/wxbase/html/wx_HtmlEasyPrinting.cpp
     ! Fixed compiler warnings

  *  wxharbour.spec
     * changed revision to 4


2010-05-27 00:30 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/raddox/TField.prg
     ! Fixed setting values to ::FFieldReadBlock/::FFieldWriteBlock
     * code cleanup

2010-05-26 22:42 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/raddox.ch
     * renamed data on TField from "ObjValue" to "ObjType"
     * changed order on assigning members on TField creation

  *  src/raddox/TAlias.prg
     * added code to create table if ::IsTempFile

  *  src/raddox/TField.prg
     + added method:
       + IsTableField : returns true if field method type = "C" and is not
         calculated
     * changed assignation on SetFieldMethodType to allow create new
       table
     ! Fixed retrieving values from DBS_LEN/DBS_TYPE on TObjectField's

  *  src/raddox/TTable.prg
     + added prop's:
       + IsTempFile : true if table is based on temporary data
     + added method:
       + CreateTable : creates the physical file for table

  *  src/wxbase/books/wx_AuiNotebook.cpp
  *  src/wxbase/books/wx_Notebook.cpp
     % added protection against retriving a non existant page


2010-05-26 17:42 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  demos/dbExplorer/dbExplorer.prg
     * removed unneeded method (it's now contained in TTable)

  *  doc/wxharbour-doc.lyx
     * updated

  *  include/wxHarbour/property.ch
     * added command:
       + PROPERTY <name> DEFAULT <value> => DATA F<name> INIT <value>

  *  src/raddox/TTable.prg
     * unified member/method's TableName/TableNameValue to TableFileName
     * added autoCreate prop
     * GetTableName checks for autoCreate and if requiered creates tmp filename

2010-05-26 15:19 UTC-0500 Teo Fonrouge (teo/at/windtelsoft/dot/com)